<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Album</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="back_btn_content_desc">Back Button</string>
    <string name="title_activity_create_album">CreateAlbumActivity</string>
    <string name="create_album_done_button_text">Done</string>
    <string name="create_album_Cancel_button_text">Can</string>
    <string name="create_album_save_button_text">Save</string>
    <string name="create_album_Move_Left_button_text"><![CDATA[<]]></string>
    <string name="create_album_Move_right_button_text"><![CDATA[>]]></string>
    <string name="create_album_delete_button_text">Del</string>
    <string name="create_album_dialog_heading_text">Give Album Name....</string>
    <string name="create_album_dialog_positive_btn_text">Save Album</string>
    <string name="create_album_dialog_negative_btn_text">Cancel Save</string>
    <string name="title_activity_view_album">View Album</string>
    <string name="view_album_dialog_positive_btn_text">Edit Album</string>
    <string name="view_album_dialog_neagative_btn_text">Delete Album</string>
    <string name="view_album_dialog_neautral_btn_text">Cancel</string>
    <string name="title_activity_album_view_pager">AlbumViewPager</string>

</resources>
