<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res/com.myalbum.album"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbars="vertical"
    tools:context="com.myalbum.album.CreateAlbumActivity$PlaceholderFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="135dp"
        android:background="@drawable/gallery1border"
        android:gravity="center|center_vertical"
        android:orientation="vertical" >

         <LinearLayout
             android:layout_width="290dp"
             android:layout_height="120dp"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:gravity="center"
             android:orientation="vertical" >

       <com.myalbum.album.HorizontialListView
           android:id="@+id/listview"
           android:layout_width="fill_parent"
           android:layout_height="83dp"
           android:layout_gravity="top" />

         <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="25dp"
              >
              
             
             <Button
                 android:id="@+id/button0"
                 style="?android:attr/buttonStyleSmall"
                 android:layout_width="40dp"
                 android:layout_height="25dp"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentTop="true"
                 android:layout_marginLeft="1dp"
                 android:background="@drawable/createactivityfolderbutton"
                 android:gravity="center"
                 android:text="@string/create_album_done_button_text" />

             <Button
                 android:id="@+id/button1"
                 style="?android:attr/buttonStyleSmall"
                 android:layout_width="40dp"
                 android:layout_height="25dp"                
                 android:layout_alignParentTop="true"
                 android:layout_marginLeft="1dp"
                  android:layout_toRightOf="@+id/button0"
                 android:background="@drawable/createactivityfolderbutton"
                 android:gravity="center"
                 android:text="@string/create_album_save_button_text" />

             <Button
                 android:id="@+id/button2"
                 style="?android:attr/buttonStyleSmall"
                  android:layout_width="40dp"
                 android:layout_height="25dp"                
                 android:layout_alignParentTop="true"
                 android:layout_marginLeft="1dp"
                 android:layout_toRightOf="@+id/button1"
                 android:background="@drawable/createactivityfolderbutton"
                 android:gravity="center"
                 android:text="@string/create_album_Move_Left_button_text" />

             <Button
                 android:layout_marginLeft="1dp"
                 android:id="@+id/button3"
                 style="?android:attr/buttonStyleSmall"
                 android:layout_width="40dp"
               android:layout_height="25dp"
                android:gravity="center"
                
                  android:layout_alignParentTop="true"
                 android:background="@drawable/createactivityfolderbutton"
                 android:layout_toRightOf="@+id/button2"
                  android:text="@string/create_album_Move_right_button_text"  />

             <Button
                 android:layout_marginLeft="1dp"
                 android:id="@+id/button4"
                 style="?android:attr/buttonStyleSmall"
                  android:layout_width="40dp"
                android:layout_height="25dp"
                 android:layout_alignParentTop="true"
                 android:gravity="center"
                 android:background="@drawable/createactivityfolderbutton"
                 android:layout_toRightOf="@+id/button3"
                  android:text="@string/create_album_delete_button_text"  />
             
              
             <Button
                 android:layout_marginLeft="1dp"
                 android:id="@+id/button5"
                 style="?android:attr/buttonStyleSmall"
                  android:layout_width="40dp"
                android:layout_height="25dp"
                 android:layout_alignParentTop="true"
                 android:gravity="center"
                 android:background="@drawable/createactivityfolderbutton"
                 android:layout_toRightOf="@+id/button4"
                  android:text="@string/create_album_Cancel_button_text"  />
               
           </RelativeLayout>
       
      
        </LinearLayout>
        

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:background="@drawable/gallery1border"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="290dp"
            android:layout_height="310dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:orientation="vertical" >

            <GridView
                android:id="@+id/gridView1"
                android:layout_width="fill_parent"
                android:layout_height="260dp"
                android:columnWidth="75dip"
                android:gravity="center"
                android:horizontalSpacing="5dp"
                android:numColumns="auto_fit"
                android:stretchMode="columnWidth"
                android:verticalSpacing="5dp" />

               <Button
                   android:id="@+id/selectfolderbutton"
                   android:layout_width="fill_parent"
                   android:layout_height="30dp"
                   android:layout_marginTop="10dp"
                   app:layout_gravity="center"
                   android:background="@drawable/createactivityfolderbutton"
                   android:gravity="center"
                   android:text="Selelct Folder"
                   android:textSize="15dp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
